# setl2

./: AUTHORS  COPYING  INSTALL  LICENSE  Makefile.am  Makefile.in  README.md  acconfig.h  configure  configure.in  util.stl
RAW/: setl2_ubuntu.tgz
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
distribution/: rebuild
distribution/setl_packages/basics/: get_lines_pak.stl  random_pak.stl  red_string_utility_pak.stl  sort_pak.stl
distribution/setl_packages/native_packages/: parser_pak.stl  string_utility_pak.stl  stringm_pak.stl  zip_pak.stl
distribution/test_files/: junk2  read_named_data_testfile
src/: Makefile.am  Makefile.in  abend.c  abend.h  ast.c  ast.h  axobj.c  axobj.h  builtins.h  builtsym.h  c_integers.c  c_integers.h  c_main.c  c_reals.c  c_reals.h  c_strngs.c  c_strngs.h  callinc.h  callout.c  callske2.c  callskel.c  chartab.h  cmdline.c  cmdline.h  compiler.h  config.h.in  config.h.win  const.c  const.h  emit.h  empty.g  execute.c  execute.h  filename.c  filename.h  form.h  genbool.c  genbool.h  genexpr.c  genexpr.h  (+105 more)
stlc/: Makefile.am  Makefile.in  stlc.c
stll/: Makefile.am  Makefile.in  stll.c
stlx/: Makefile.am  Makefile.in  stlx.c
testsuite/: Makefile.am  Makefile.in
testsuite/setl2.test/: 01.err  01.stl  02.stl  03.err  03.stl  04.stl  04.test  05.err  05.stl  06.err  06.stl  07.err  07.stl  08.err  08.stl  09.err  09.stl  10.stl  11.err  11.stl  12.err  12.stl  13.err  13.stl  14.err  14.stl  15.err  15.stl  16.err  16.stl  17.err  17.stl  18.err  18.stl  19.stl  20.stl  21.err  21.stl  22.err  22.stl  (+41 more)
