lib_LTLIBRARIES     = libsetl2.la 
libsetl2_la_CFLAGS = -DPLATFORM='"@HOST_PLATFORM@"'
libsetl2_la_LIBADD = -ldl
libsetl2_la_LDFLAGS = -no-undefined -avoid-version
libsetl2_la_SOURCES =  \
	abend.c \
	alloca.c \
 	abend.h \
	ast.h \
	ast.c \
	builtins.h \
	builtsym.h \
	c_integers.c \
	c_integers.h \
	c_main.c \
	c_reals.h \
	c_reals.c \
	c_strngs.c \
	c_strngs.h \
	callinc.h \
	callout.c \
	callske2.c \
	callskel.c \
	chartab.h \
	cmdline.c \
	cmdline.h \
	compiler.h \
	const.c \
	const.h \
	emit.h \
	empty.g \
	execute.c \
	execute.h \
	filename.c \
	filename.h \
	form.h \
	genbool.c \
	genbool.h \
	genexpr.c \
	genexpr.h \
	geniter.c \
	geniter.h \
	genlhs.c \
	genlhs.h \
	genpcode.c \
	genpcode.h \
	genquads.c \
	genquads.h \
	genstmt.c \
	genstmt.h \
	getopt.h \
	getopt.c \
	getopt1.c \
	giveup.c \
	giveup.h \
	import.h \
	import.c \
	interp.c \
	interp.h \
	io.c \
	iters.c \
	iters.h \
	lex.c lex.h \
	libcom.h \
	libfile.c \
	libfile.h \
	libfree.c \
	libfree.h \
	libman.c \
	libman.h \
	libstr.c \
	libstr.h \
	libunit.c \
	libunit.h \
	listing.c \
	listing.h \
	loadunit.c \
	loadunit.h \
	macros.h \
	mailbox.c \
	mailbox.h \
	maps.c \
	maps.h \
	math.c \
	mcode.h \
	messages.h \
	misc.c \
	namtab.c \
	namtab.h \
	ntdesc.h \
	objects.c \
	objects.h \
	optimize.c \
	optimize.h \
	parse.c \
	parse.h \
	parsetab.c \
	parsetab.h \
	pcode.h \
	process.c \
	process.h \
	procs.c \
	procs.h \
	procsupt.c \
	proctab.h \
	proctab.c \
	quads.c \
	quads.h \
	ruledesc.h \
	semact.c \
	semact.h \
	semcheck.c \
	semcheck.h \
	setl2.g \
	setlstubs.c \
	setlvers.h \
	sets.c \
	sets.h \
	shared.c \
	shared.h \
	slots.c \
	slots.h \
	specmacs.h \
	specs.c \
	specs.h \
	stlx_files.h \
	str.c symtab.c \
	symtab.h \
	system.c \
	system.h \
	tuples.c \
	tuples.h \
	type.c \
	unittab.c \
	unittab.h \
	x_files.c \
	x_files.h \
	x_integers.c \
	x_integers.h \
	x_main.c \
	x_reals.c \
	x_reals.h \
	x_strngs.c \
	x_strngs.h  

libsetl2incdir = $(includedir)
libsetl2inc_HEADERS = setlshell.h system.h messages.h

